camo-derive/tests/cases/macros.stderr
error: `camo` does not support macros
 --> tests/cases/macros.rs:9:8
  |
9 |     f: foo!(),
  |        ^^^
